--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -14,6 +14,7 @@
 
     <!-- Persistent bottom navigation overlay -->
     <include
+        android:id="@+id/bottom_nav"
         layout="@layout/view_bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="56dp"
