--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,46 +13,48 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-    <TextView
-        android:id="@+id/title_text"
+    <LinearLayout
+        android:id="@+id/scanning_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:text="@string/scan_passport"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white" />
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
-    <ImageView
-        android:id="@+id/nfc_icon"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_below="@id/title_text"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
-        android:contentDescription="@string/scan_passport"
-        android:src="@drawable/ic_nfc" />
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/scan_passport"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white" />
 
-    <TextView
-        android:id="@+id/instruction_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nfc_icon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:gravity="center"
-        android:text="@string/place_passport"
-        android:textSize="18sp"
-        android:textColor="@android:color/white" />
+        <ImageView
+            android:id="@+id/nfc_icon"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="48dp"
+            android:contentDescription="@string/scan_passport"
+            android:src="@drawable/ic_nfc" />
+
+        <TextView
+            android:id="@+id/instruction_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:gravity="center"
+            android:text="@string/place_passport"
+            android:textSize="18sp"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/progress_bar"
         android:layout_width="192dp"
         android:layout_height="192dp"
-        android:layout_below="@id/instruction_text"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
+        android:layout_centerInParent="true"
         android:src="@drawable/loading"
         android:contentDescription="@string/scanning"
         android:visibility="gone" />
