--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme without an ActionBar (no top title bar). -->
-    <style name="Theme.EarthWallet" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.EarthWallet" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#4caf50</item>
         <item name="colorPrimaryVariant">#388e3c</item>
